# tavi-assessment

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  bot.py  db.py  mocks.py  pyproject.toml  schemas.py  system_prompts.py  tavi-assessment.db  test_schemas.py  test_work_order.py
frontend/: .env.example  README.md  conversation_1.md  conversation_2.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/discovery/: page.tsx
frontend/app/launch/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/review/: page.tsx
frontend/app/vendors/: page.tsx
frontend/components/: app-shell.tsx  workflow-provider.tsx
frontend/components/intake/: transcript.tsx  voice-orb.tsx  work-order-summary.tsx
frontend/components/vendors/: vendor-card.tsx
frontend/lib/: types.ts
