[project]
name = "tavi-backend"
version = "0.1.0"
description = "Tavi voice intake service"
requires-python = ">=3.11"
dependencies = [
  "pipecat-ai[openai,runner,silero,webrtc]>=1.4.0",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.0",
]

[dependency-groups]
dev = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
